<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <!-- Calf Overview -->
    <TextView 
        android:id="@+id/calf_overview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/label_overview" />
    
    <Button
        android:id="@+id/general_overview_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:layout_centerHorizontal="true"
        android:layout_below="@id/calf_overview_label"
        android:text="@string/button_calf_calf_overview"
        android:onClick="goToOverview" />
    
    <Button
        android:id="@+id/meal_overview_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:layout_centerHorizontal="true"
        android:layout_below="@id/general_overview_button"
        android:text="@string/button_calf_meal_record"
        android:onClick="goToMealRecord" />
    
    <Button
        android:id="@+id/milk_overview_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:layout_centerHorizontal="true"
        android:layout_below="@id/meal_overview_button"
        android:text="@string/button_calf_milk_replacer"
        android:onClick="goToMilkReplacer" />
    
    <!-- Monthly Report -->
    <TextView 
        android:id="@+id/monthly_report_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/milk_overview_button"
        android:text="@string/monthly_report" />
    
    <Button
        android:id="@+id/monthly_report_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:layout_centerHorizontal="true"
        android:layout_below="@id/monthly_report_label"
        android:text="@string/monthly_report"
        android:onClick="goToMonthlyRecord" />
</RelativeLayout>
