<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddMedicalRecordActivity" >

    <!-- Ear Tag -->
    <TextView 
        android:id="@+id/cow_ear_tag_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_add_medical_record_cow_ear_tag" />
    
    <EditText
        android:id="@+id/cow_ear_tag_text_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/cow_ear_tag_label"
        android:layout_alignBaseline="@id/cow_ear_tag_label"
        android:hint="@string/activity_add_medical_record_cow_ear_tag"
        android:maxLines="1"
        android:inputType="number"/>
    
    <!-- Medical Details -->
    <TextView 
        android:id="@+id/cow_medical_details_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cow_ear_tag_label"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_medical_record_details" />
    
    <EditText
   		android:id="@+id/cow_medical_details_entry"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
        android:layout_alignLeft="@id/cow_ear_tag_text_entry"
    	android:layout_alignBaseline="@id/cow_medical_details_label"
        android:hint="@string/activity_add_medical_record_details"
        android:maxLines="1"
        android:singleLine="true" />
    
    <!-- Batch no. -->
    <TextView 
        android:id="@+id/cow_batch_no_label" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cow_medical_details_label"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_medical_record_batch_no" />
    
    <EditText
        android:id="@+id/cow_batch_no_text_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/cow_ear_tag_text_entry"
        android:layout_alignBaseline="@id/cow_batch_no_label"
        android:hint="@string/activity_add_medical_record_batch_no"
        android:maxLines="1"
        android:singleLine="true"  />
    
    <!-- Date Of Use -->
    <TextView 
        android:id="@+id/cow_date_of_use_label" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cow_batch_no_label"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_medical_record_date_of_use" />
    
    <Button 
        android:id="@+id/cow_date_of_use_date_button"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:text="@string/pick_date" 
    	android:layout_alignLeft="@id/cow_ear_tag_text_entry"
    	android:layout_alignBaseline="@id/cow_date_of_use_label"
   	 	android:onClick="showDateOfUseDatePickerDialog" />
    
    <TextView 
        style="@android:style/Widget.EditText"
        android:id="@+id/cow_date_of_use_show"
        android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/cow_date_of_use_date_button"
    	android:layout_alignBaseline="@id/cow_date_of_use_date_button"
    	android:hint="@string/activity_add_medical_record_date_of_use" />
    
    <!-- Quantity used -->
	<TextView 
        android:id="@+id/cow_quantity_used_label" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cow_date_of_use_label"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_medical_record_quantity_used" />
    
    <EditText
        android:id="@+id/cow_quantity_used_text_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cow_quantity_used_label"
        android:layout_alignLeft="@id/cow_ear_tag_text_entry"
        android:layout_alignBaseline="@id/cow_quantity_used_label"
        android:hint="@string/activity_add_medical_record_quantity_used"
        android:maxLines="1"
        android:inputType="number"/>
    
    <!-- Doctor -->
	<TextView 
        android:id="@+id/cow_doctor_label" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cow_quantity_used_label"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_medical_record_doctor" />
    
    <EditText
        android:id="@+id/cow_doctor_text_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cow_doctor_label"
        android:layout_alignLeft="@id/cow_ear_tag_text_entry"
        android:layout_alignBaseline="@id/cow_doctor_label"
        android:hint="@string/activity_add_medical_record_doctor"
        android:singleLine="true" />
    
    <!-- Reason / Comments -->
	<TextView 
        android:id="@+id/cow_comments_label" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cow_doctor_label"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_medical_record_comments" />
    
    <EditText
        android:id="@+id/cow_comments_text_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cow_comments_label"
        android:layout_alignLeft="@id/cow_ear_tag_text_entry"
        android:layout_alignBaseline="@id/cow_comments_label"
        android:hint="@string/activity_add_medical_record_comments" />
    
    <!-- Submit button -->
    <Button 
        android:id="@+id/submit_button"
        android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:text="@string/add_record"
    	android:layout_alignParentBottom="true"
    	android:layout_centerHorizontal="true" 
    	android:onClick="validateCreateMedicalRecordEntry"/>

</RelativeLayout>
