<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddDehorningEventActivity" >

    <!-- Date Dehorned -->
    <TextView 
        android:id="@+id/date_dehorned_label" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_dehorning_event_date_dehorned" />
    
    <Button 
        android:id="@+id/date_dehorned_button"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:text="@string/pick_date" 
    	android:layout_marginLeft="10dp"
    	android:layout_toRightOf="@id/date_dehorned_label"
    	android:layout_alignBaseline="@id/date_dehorned_label"
   	 	android:onClick="showDateOfUseDatePickerDialog" />
    
    <TextView 
        style="@android:style/Widget.EditText"
        android:id="@+id/date_dehorned_show"
        android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/date_dehorned_button"
    	android:layout_alignBaseline="@id/date_dehorned_button"
    	android:hint="@string/activity_add_dehorning_event_date_dehorned" />
    
    <!-- Group Ref. -->
    <TextView 
        android:id="@+id/group_ref_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_dehorned_label"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_dehorning_event_group_ref" />
    
    <EditText
        android:id="@+id/group_ref_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/date_dehorned_button"
        android:layout_alignBaseline="@id/group_ref_label"
        android:hint="@string/activity_add_dehorning_event_group_ref"
        android:maxLines="1"
        android:singleLine="true" />
    
    <!-- No. Dehorned -->
    <TextView 
        android:id="@+id/number_dehorned_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_ref_label"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_dehorning_event_number_dehorned" />
    
    <EditText
        android:id="@+id/number_dehorned_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/date_dehorned_button"
        android:layout_alignBaseline="@id/number_dehorned_label"
        android:hint="@string/activity_add_dehorning_event_number_dehorned"
        android:maxLines="1"
        android:inputType="number"/>
    
    <!-- D-Caine -->
    <TextView 
        android:id="@+id/d_caine_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_dehorned_label"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_dehorning_event_d_caine" />
    
    <EditText
        android:id="@+id/d_caine_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/date_dehorned_button"
        android:layout_alignBaseline="@id/d_caine_label"
        android:hint="@string/activity_add_dehorning_event_d_caine"
        android:maxLines="1"
        android:singleLine="true" />
    
    <!-- Submit button -->
    <Button 
        android:id="@+id/submit_button"
        android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:text="@string/add_event"
    	android:layout_alignParentBottom="true"
    	android:layout_centerHorizontal="true" 
    	android:onClick="validateCreateDehorningEventEntry"/>

</RelativeLayout>
