<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddMilkReplacerRecordActivity" >

    <!-- Purchase Date -->
    <TextView 
        android:id="@+id/milk_record_purchase_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_milk_record_purchase_date" />
    
    <Button 
        android:id="@+id/milk_record_purchase_date_button"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:text="@string/pick_date" 
    	android:layout_marginLeft="10dp"
    	android:layout_toRightOf="@id/milk_record_purchase_date_label"
    	android:layout_alignBaseline="@id/milk_record_purchase_date_label"
   	 	android:onClick="showPurchaseDateDatePickerDialog" />
    
    <TextView 
        style="@android:style/Widget.EditText"
        android:id="@+id/milk_record_purchase_date_show"
        android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_toRightOf="@id/milk_record_purchase_date_button"
    	android:layout_alignBaseline="@id/milk_record_purchase_date_button" 
    	android:hint="@string/activity_add_milk_record_purchase_date" />
    
    <!-- Milk Name -->
    <TextView 
        android:id="@+id/milk_record_milk_name_label"
        android:layout_below="@id/milk_record_purchase_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_milk_record_milk_name" />
    
    <EditText
        android:id="@+id/milk_record_milk_name_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/milk_record_milk_name_label"
        android:layout_alignLeft="@id/milk_record_purchase_date_button"
        android:hint="@string/activity_add_milk_record_milk_name"
        android:singleLine="true"
        android:maxLines="1"/>
    
    <!-- Manufacturer -->
    <TextView 
        android:id="@+id/milk_record_manufacturer_label"
        android:layout_below="@id/milk_record_milk_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_milk_record_manufacturer" />
    
    <EditText
        android:id="@+id/milk_record_manufacturer_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/milk_record_manufacturer_label"
        android:layout_alignLeft="@id/milk_record_purchase_date_button"
        android:hint="@string/activity_add_milk_record_manufacturer"
        android:singleLine="true"
        android:maxLines="1"/>
    
    <!-- Supplier -->
    <TextView 
        android:id="@+id/milk_record_supplier_label"
        android:layout_below="@id/milk_record_manufacturer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_milk_record_supplier" />
    
    <EditText
        android:id="@+id/milk_record_supplier_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/milk_record_supplier_label"
        android:layout_alignLeft="@id/milk_record_purchase_date_button"
        android:hint="@string/activity_add_milk_record_supplier"
        android:singleLine="true"
        android:maxLines="1"/>
    
    <!-- Invoice No. -->
    <TextView 
        android:id="@+id/milk_record_invoice_label"
        android:layout_below="@id/milk_record_supplier_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_milk_record_invoice_no" />
    
    <EditText
        android:id="@+id/milk_record_invoice_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/milk_record_invoice_label"
        android:layout_alignLeft="@id/milk_record_purchase_date_button"
        android:hint="@string/activity_add_milk_record_invoice_no"
        android:singleLine="true"
        android:maxLines="1"/>
    
    <!-- Quantity -->
    <TextView 
        android:id="@+id/milk_record_quantity_label"
        android:layout_below="@id/milk_record_invoice_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_add_milk_record_quantity" />
    
    <EditText
        android:id="@+id/milk_record_quantity_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/milk_record_quantity_label"
        android:layout_alignLeft="@id/milk_record_purchase_date_button"
        android:hint="@string/activity_add_milk_record_quantity"
        android:maxLines="1"
        android:inputType="number"/>
    
    <!-- Submit button -->
    <Button 
        android:id="@+id/submit_button"
        android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:text="@string/add_record"
    	android:layout_alignParentBottom="true"
    	android:layout_centerHorizontal="true" 
    	android:onClick="validateCreateMilkRecordEntry"/>

</RelativeLayout>
